--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "Slopsite Detector",
-  "description": "Be warned of garbage AI-generated websites.",
+  "description": "Be warned of AI-generated slop websites.",
   "version": "1.0",
   "manifest_version": 3,
   "action": {
-    "default_popup": "./test.html",
+    "default_popup": "./popup.html",
     "default_icon": "./images/16_test_icon.png"
   },
   "permissions": ["webNavigation", "scripting", "activeTab", "storage"],
